[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = { version = "*" }
tokio-util = { version = "0.7.17", features = ["full"] }
futures = "0.3.31"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
